name:                roger
version:             0.1.0.0
synopsis:            A runit-friendly scheduler for repeating tasks.
-- description:         
homepage:            https://github.com/dwb/roger-haskell
license:             BSD3
license-file:        LICENSE
author:              Dan Brown
maintainer:          dan@stompydan.net
copyright:           Dan Brown <dan@stompydan.net>, 2014
category:            System
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable roger
  main-is:             roger.hs
  build-depends:       base >=4.6 && <4.7,
                       parsec >= 3.1.3 && < 3.2,
                       time >= 1.4.0 && < 1.5,
                       process >= 1.1.0 && < 1.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall -Werror
